# monad-challenges

./: cabal.nix  flake.nix  monad-challenges-code.cabal  test.nix
challenge/: set1_0.hs
challenges/: Challenge.hs  Common.hs  List.hs  Maybe.hs  State.hs
exe/: Main.hs
src/: MCPrelude.hs  hexDecode.hs  template.hs
tests/: ChallengeSpec.hs  ListSpec.hs  MaybeSpec.hs  Runner.hs  StateMaybeSpec.hs  StateSpec.hs
