name:                monad-challenges-code
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
synopsis:            The best way to learn monads
description:         Series of challenges to help build intuition about monads
category:            Education
build-type:          Simple
cabal-version:       >=1.10

Tested-With:
    GHC == 7.6.3,
    GHC == 7.8.4,
    GHC == 7.10.3,
    GHC == 8.0.2,
    GHC == 8.2.2,
    GHC == 8.4.4,
    GHC == 8.6.3,
    GHC == 8.8.3,
    GHC == 8.10.1

library mcprelude
    exposed-modules:     MCPrelude
    other-extensions:    Trustworthy, CPP, NoImplicitPrelude, BangPatterns
    build-depends:       base >= 4 && < 5
    hs-source-dirs:      src
    default-language:    Haskell2010

library challenges
    exposed-modules:     State, Maybe, List, Common
    other-extensions:    NoImplicitPrelude, MonadComprehensions, RebindableSyntax
    build-depends:       base >= 4 && < 5, mcprelude
    hs-source-dirs:      challenges
    default-language:    Haskell2010

executable hexdecode
    hs-source-dirs: src
    main-is: hexDecode.hs
    build-depends: base, split
    default-language:    Haskell2010

executable main
    hs-source-dirs: exe
    main-is: Main.hs
    build-depends: base, mcprelude, challenges
    default-language:    Haskell2010

test-suite test-monad
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Runner.hs
    other-modules:    ListSpec, MaybeSpec, StateSpec
    build-depends:    base,
                      challenges,
                      hspec,
                      SHA,
                      utf8-string,
                      mcprelude

    default-language: Haskell2010
